k8s/media/pinchflat/resources/web-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: tmp
          emptyDir: {}
        - name: etc-yt-dlp
          emptyDir: {}
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: nfs-media
          persistentVolumeClaim:
            claimName: nfs-media
      containers:
        - name: pinchflat
          image: ghcr.io/kieraneglin/pinchflat:v2025.3.6@sha256:fb82ca2f06afaf0651ec23bd68f9c45d9b44bbc94097d7a9bb28aa7431615e0c
          resources:
            requests:
              memory: 100M
            limits:
              memory: 4G
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: etc-yt-dlp
              mountPath: /etc/yt-dlp
            - name: volume
              mountPath: /config
            - name: nfs-media
              mountPath: /downloads
              subPath: YouTube
          ports:
            - name: http
              containerPort: 8945
