k8s/media/pinchflat/resources/internal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    gethomepage.dev/href: 'https://pinchflat.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: pinchflat
    gethomepage.dev/group: Other
    gethomepage.dev/icon: pinchflat
    gethomepage.dev/name: Pinchflat
spec:
  ingressClassName: internal
  rules:
    - host: &host pinchflat.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
